bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: identifier expected but 'else' found.
  else if (litMessage=="L"){gauche();avance()}
  ^